2005-01-24  Douglas Bates  <bates@bates7>

	* man/{guPrenat.Rd,guImmun.Rd,s3bbx.Rd,s3bby.Rd}: Add
	\encoding{latin1} per Kurt's request. 

2005-01-23  Douglas Bates  <bates@bates7>

	* R/lmer.R (fn): In the gradient function passed to optim, check
	if the parameters are equal to the current values before
	installing them.  This could save an unnecessary decomposition.

2005-01-22  Douglas Bates  <bates@bates7>

	* R/lmer.R (lmer): Changes in formulas code to allow explicit
	interactions in the grouping factors and formula without a fixed
	term.

2005-01-03  Douglas Bates  <bates@bates1-home>

	* R/lmer.R: Switch from lmeRep to lmer representation

2004-12-16  Douglas Bates  <bates@bates1-home>

	* R/lme.R (make.mf.call): Omit control values that are no longer used.

2004-12-13  Douglas Bates  <bates@bates1-home>

	* R/lme.R (lmeControl): Change msVerbose to an integer value.

	* R/ssclme.R: Change parameterization for optimization to
	constrained version that approaches the boundary safely.

	* tests/egsingle.R: Added regression test for multiple grouping
	factors with multivariate random effects.

2004-10-04  Douglas Bates  <bates@bates1-home>

	* R/lme.R: Corrected number of arguments to lmeRep_sigma

2004-10-02  Douglas Bates  <bates@bates1-home>

	* R/lme.R Re-order random when facs is reordered (Closes #10)
	Also add as.factor in creation of facs.  Previously using a
	grouping factor that was not a factor produced an obscure error
	message.

2004-09-27  Douglas Bates  <bates@bates1-home>

	* man/lme-class.Rd: Added documentation for methods with lmeRep in
	the signature.  Will need to remove all methods for ssclme objects
	when lmeRep can be used for general models.

2004-06-11  Douglas Bates  <bates@bates2_home>

	* inst/doc/MlmSoftRev.Rnw: Add new vignette

	* R/GLMM.R: protect verbose PQL output.

2004-06-08  Douglas Bates  <bates@stat.wisc.edu>

	* R/lme.R (lmeControl) R/GLMM.R: Change name to PQLmaxIt and