@@ -1,30 +1,0 @@
-% $Id: intervals.Rd,v 1.1 2003/06/03 18:31:33 bates Exp $
-\name{intervals}
-\title{Confidence Intervals on Coefficients}
-\usage{
-intervals(object, level, \dots)
-}
-\alias{intervals}
-\arguments{
- \item{object}{a fitted model object from which parameter estimates can
-   be extracted.}
- \item{level}{an optional numeric value for the interval confidence
-   level. Defaults to 0.95.}
- \item{\dots}{some methods for the generic may require additional
-   arguments.}
-}
-\description{
-  Confidence intervals on the parameters associated with the model
-  represented by \code{object} are obtained. This function is generic;
-  method functions can be written to handle specific classes of
-  objects. Classes which already have methods for this function include:
-  \code{gls}, \code{lme}, and \code{lmList}. 
-}
-\value{
-  will depend on the method function used; see the appropriate documentation.
-}
-\seealso{\code{\link{confint}}}
-} 
-%\author{Jose Pinheiro \email{Jose.Pinheiro@pharma.novartis.com} and Douglas Bates \email{bates@stat.wisc.edu}}
-%\examples{}
-\keyword{models}
